cmake_minimum_required(VERSION 3.0.0)
project(contest_2_cpp VERSION 0.1.0 LANGUAGES C CXX)



# add_executable(contest_2_cpp          problem1.cpp)
# add_executable(contest_2_cpp          problem2.cpp)
add_executable(contest_2_cpp          problem3.cpp)
# add_executable(contest_2_cpp          problem4.cpp)
# add_executable(contest_2_cpp          problem5.cpp)
# add_executable(contest_2_cpp          problem6.cpp)
